2009-08-07  Juri Linkov  <juri@jurta.org>

	* puresize.h (BASE_PURESIZE): Increase to 1270000.

2009-08-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* print.c (syms_of_print): Undo previous change.

2009-08-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* lread.c (read1, syms_of_lread): Read hashtables back from the
	readable format.

	* print.c (print_preprocess, print_object): Print hashtables fully
	and readably.
	(syms_of_print): Provide 'hashtable-print-readable.

2009-08-02  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_descriptor_to_entity): Handle case when descriptor has
	no family set.
	(nsfont_open): Handle case when entity has no family.

2009-07-29  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_findfonts): Fix 2009-07-24 change to return only one
	element, not a list, for match case.

2009-07-28  Kenichi Handa  <handa@m17n.org>

	* font.c (font_parse_xlfd): Check DPI and AVGWIDTH properties more
	rigidly.

	* xfont.c (xfont_list_pattern): Don't ignore the return value of
	font_parse_xlfd.  Check font properties more rigidly.

2009-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/netbsd.h (SIGNALS_VIA_CHARACTERS): Remove, already defined in bsd-common.h

2009-07-27  Kenichi Handa  <handa@m17n.org>

	* xfaces.c (face_with_height): Call font_clear_prop.

2009-07-26  Chong Yidong  <cyd@stupidchicken.com>

	* dispnew.c (init_display): Use Qx, Qw32, and Qns.

	* xterm.c (x_term_init): Use Qx.

	* nsfont.m (nsfont_draw): Revert 2009-07-15 change.

	* nsterm.m (ns_maybe_dumpglyphs_background): Revert 2009-07-15
	change.
	(ns_get_color): Revert 2009-07-16 change.

2009-07-25  Eli Zaretskii  <eliz@gnu.org>

	* lread.c (syms_of_lread) <force_load_messages>: New variable.
	(Fload): Use it to force load messages, even if NOMESSAGES is
	non-nil.

2009-07-25  Ken Raeburn  <raeburn@raeburn.org>

	* coding.h (decode_coding_string, encode_coding_string): Use
	SCHARS macro.

	* lread.c: Rewrite 2009-07-21 changes.
	(load_depth): Deleted.